test/data/syntax-errors/no-comma-in-read.iki
var x: int;
var y: int;
read x y;
